fixes menu overlap issue on browser resize

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -26,5 +26,9 @@
         font-weight: bold;
         /* color: #f44336;*/
     }
+
+    @media only screen and (max-width: 990px) {
+        display: none;
+    }
 }
 
